<resources>
    <string name="app_name">MyComment</string>
    // IAMPort
    <string name="impKey" translatable="false">2639551839513046</string>
    <string name="impSecret" translatable="false">xneuKxb29v1H58xr45yn913sbdB7XhMvE00pxcrGHtoMBWeG1M4bN7EYlf6jxTOcTPBr128Iwwv7tJOv</string>
    // Kakao
    <string name="kakao_app_key" translatable="false">33fd4a8e6936248e2f94f8d91b6bc084</string>
    // Facebook
    <string name="facebook_app_id" translatable="false">558950375021094</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb558950375021094</string>
    <string name="activity_main_btn_Write">Done</string>
    <string name="activity_main_btn_Modify">Done</string>
    <string name="activity_main_searchText">Titles, Actors (Korean or English)</string>
    <string name="list_item_talk_comment_Reply">Reply</string>
    <string name="fragment_drama_feed_modify">Add Photo</string>
    <string name="Confirm">Confirm</string>
    <string name="list_item_talk_comment_ActorTalk">Actor\'s Talk</string>
    <string name="Close">Cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="dialog_notice_btnToday">Invisible for a day</string>
    <string name="fragment_sign_in_btnFacebook">Login with Facebook</string>
    <string name="fragment_sign_in_btnKakao">Login with Kakao</string>
    <string name="fragment_sign_in_btnGoogle">Login with Google</string>
    <string name="Login">Login</string>
    <string name="Doyouwantlogin">Do you want to login?</string>
    <string name="fragment_sign_in_descLabel">My Drama Friend\n\'MyComment - DramaTalk\'</string>
    <string name="profile_write">Sign Up</string>
    <string name="Nickname">Nickname</string>
    <string name="fragment_sign_step_nicknameField">Please enter your nickname</string>
    <string name="fragment_sign_step_birthLabel">Date of Birth (optional)</string>
    <string name="fragment_sign_step_birthField">Please select your date of birth</string>
    <string name="fragment_sign_step_genderLabel">Gender (optional)</string>
    <string name="fragment_sign_step_genderField">Please select your gender</string>
    <string name="fragment_sign_step_textlabel">Entering your date of birth and gender accurately will help you participate in the drama event</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="Nicknamealreadyexists">Nickname already exists</string>
    <string name="dialog_nickname_ChangeNickname">Change Nickname</string>
    <string name="dialog_nickname_titleField">Please enter the nickname you want to change.</string>
    <string name="NicknameDialog">This nickname isn\'t available</string>
    <string name="signstep1fragment_nickname">Nickname can only use Korean, English, numbers and under 15 characters</string>
    <string name="dialog_agree_title">Agree to terms and conditions</string>
    <string name="dialog_agree_all">Agree to all terms and conditions</string>
    <string name="dialog_agree_service">Agree to Terms of Service (required)</string>
    <string name="dialog_agree_policy">Agree to Privacy Policy (required)</string>
    <string name="dialog_agree_community_guideline">Agree to Community Guideline (required)</string>
    <string name="dialog_agree_older">14 years old or older (required)</string>
    <string name="dialog_agree_marketing">Agree to Marketing Receive Information (optional)</string>
    <string name="fragment_bookmark_title">My Favorites</string>
    <string name="fragment_talk_view_all">View all ></string>
    <string name="fragment_talk_Popular_Drama">Popular Drama</string>
    <string name="fragment_talk_TheActorWeLove">The Actor We Love</string>
    <string name="fragment_talk_yesterday">The commenter who received the most \'water drop\' yesterday</string>
    <string name="fragment_talk_yesterday_sub">It\'s newly counted at midnight every day!</string>
    <string name="fragment_talk_todays">Today\'s Broadcast Schedule</string>
    <string name="fragment_talk_todays_view_all">View all ></string>
    <string name="fragment_organization_title">Broadcast Schedule</string>
    <string name="fragment_organization_monday">Monday</string>
    <string name="fragment_organization_tuesday">Tuesday</string>
    <string name="fragment_organization_wednesday">Wednesday</string>
    <string name="fragment_organization_thursday">Thursday</string>
    <string name="fragment_organization_friday">Friday</string>
    <string name="fragment_organization_saturday">Saturday</string>
    <string name="fragment_organization_sunday">Sunday</string>
    <string name="realtimetalk">RealtimeTalk</string>
    <string name="DramaFeed">DramaFeed</string>
    <string name="talk_count">talk</string>
    <string name="talk_detail_comment">mycomment..</string>
    <string name="Delete_comment">Delete Comment</string>
    <string name="Delete_comment_sub">Do you want to delete this comment?</string>
    <string name="Delete_alert">It has been deleted</string>
    <string name="Delete">Delete</string>
    <string name="FeelTheSame">Feel the same</string>
    <string name="Block">Block</string>
    <string name="Block_Comment">Block</string>
    <string name="Block_alert">Do you want to block this comment?</string>
    <string name="Notification">Notification</string>
    <string name="Basefragment_loginban">Your activity has been restricted because you wrote an comment that is restricted in the operating principles</string>
    <string name="Report">report</string>
    <string name="Delete_feed">Delete</string>
    <string name="dialog_report_title">Please select a reason for reporting</string>
    <string name="dialog_report_first">Content related to sexually</string>
    <string name="dialog_report_second">Content related to weapons, assault and profanity</string>
    <string name="dialog_report_third">Content related to drugs, alcohol and smoking</string>
    <string name="dialog_report_fourth">Content related to suicide, murder, cruelty and bullying</string>
    <string name="dialog_report_fifth">Something else</string>
    <string name="report_complete">Thanks for letting us know</string>
    <string name="report_complete_sub">Your feedback is important in helping us keep the MyComment community safe.</string>
    <string name="dialog_waterdrop">I love drama!</string>
    <string name="String_ext_now">now</string>
    <string name="String_ext_minutes">minutes ago</string>
    <string name="String_ext_hours">hours ago</string>
    <string name="String_ext_days">days ago</string>
    <string name="String_ext_weeks">weeks ago</string>
    <string name="String_ext_months">months ago</string>
    <string name="String_ext_years">years ago</string>
    <string name="feed_count">feed</string>
    <string name="views">views</string>
    <string name="Edit_feed">Edit</string>
    <string name="feed_edit_title">Would you like to edit this feed?</string>
    <string name="feed_delete_title">Would you like to delete this feed?</string>
    <string name="feed_delete_sub">Feed cannot be recovered after deletion.</string>
    <string name="feed_write_title_hint">Title</string>
    <string name="feed_write_title_blank">Please enter a title</string>
    <string name="feed_write_content_blank">Please enter your content</string>
    <string name="feed_write_content_hint">Content (There must be content related to the drama, and if you register slander, abusive language, pornography, etc., it will be deleted and blocked)</string>
    <string name="feed_write_photo_alert">Up to eight pictures can be registered.</string>
    <string name="feed_write_alert_title">Would you like to post this feed?</string>
    <string name="feed_write_alert_sub">You can edit it even after posting</string>
    <string name="feed_view_latest">latest</string>
    <string name="feed_view_views">views</string>
    <string name="mycomment_original">MyComment Original</string>
    <string name="minutes">minutes</string>
    <string name="profile_photo">Change Profile Photo</string>
    <string name="Bio">Bio</string>
    <string name="profile_Bio_sub">Bio</string>
    <string name="profile_Bio_content_hint">Please introduce yourself!</string>
    <string name="profile_alert_setting">Notifications Setting</string>
    <string name="profile_comunity">Community Guidelines</string>
    <string name="profile_term">Terms of Service</string>
    <string name="profile_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="profile_delete_account">Delete Account</string>
    <string name="Delete_account_title">Are you really leaving?</string>
    <string name="profile_language_setting">Language Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_language_title">Select your language</string>
    <string name="fragment_language_subtitle">There may be pages that do not support your language</string>
    <string name="Korean">Korean</string>
    <string name="English">English</string>
    <string name="language_popup_title">Do you want to change the language?</string>
    <string name="feed_write_cancel_title">Would you like to stop posting?</string>
    <string name="feed_write_cancel_sub">If you leave the page, your posting will not be saved.</string>
    <string name="backpress_title">If you click the back button one more time, it\'ll end</string>
    <string name="network_not_connected">Not connected to the network.</string>
    <string name="Report_feed">Report</string>
    <string name="fragment_detail_overview">Overview</string>
    <string name="fragment_detail_cast">Cast</string>
    <string name="fragment_profile_report">Let us know if you see content that is offensive to others</string>
    <string name="Block_profile">Block</string>
    <string name="Block_popup_title">Are you really going to block this user? You will not be able to see the user\'s comments and profile, and it will be impossible to unblock</string>
    <string name="Block_alert_title">It has been blocked</string>
    <string name="Block_alert_user">This user has been blocked</string>
</resources>