<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/dialog_report_title"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/check1View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/dialog_report_first"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/check2View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/dialog_report_second"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/check3View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/dialog_report_third"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/check4View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/dialog_report_fourth"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/option5View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="16dp"
            android:text="@string/dialog_report_fifth"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textAlignment="center"
            android:textColor="@color/colorTextTitle"
            android:textSize="15sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
