<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvModify"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/Edit_feed"
        android:visibility="visible"
        android:paddingStart="16dp"
        android:textColor="@color/colorTextTitle"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="visible"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#707070"/>

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="16dp"
        android:text="@string/Delete_feed"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="16dp"
        android:visibility="visible"
        android:text="@string/Report_feed"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#707070"/>

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorTextTitle"
        android:text="@string/Cancel"/>


</LinearLayout>