<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/dialog_nickname_ChangeNickname"
        android:textAlignment="center"
        android:textColor="@color/colorTextTitle"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/titleField"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_input_dialog"
        android:gravity="top"
        android:hint="@string/dialog_nickname_titleField"
        android:padding="6dp"
        android:scrollHorizontally="false"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_dialog_button_disable"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/Confirm"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

</LinearLayout>
